fix(cbc:st): button

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -321,7 +321,7 @@
                 </ng-container>
               </ng-template>
               <!-- button -->
-              <ng-container *ngFor="let btn of _validBtns(c.buttons, i, c); let last = last">
+              <ng-container *ngFor="let btn of _validBtns(c.buttons, i, c, true); let last = last; trackBy: btnTrackByFn">
                 <a *ngIf="btn.children.length > 0" nz-dropdown [nzDropdownMenu]="btnMenu" [className]="btn._className || ''" nzOverlayClassName="st__btn-sub">
                   <ng-container *ngIf="_btnText(i, btn); else ellipsisIcon">
                     <span [innerHTML]="_btnText(i, btn)"></span>
@@ -333,7 +333,7 @@
                 </a>
                 <nz-dropdown-menu #btnMenu="nzDropdownMenu">
                   <ul nz-menu>
-                    <ng-container *ngFor="let subBtn of _validBtns(btn.children, i, c)">
+                    <ng-container *ngFor="let subBtn of _validBtns(btn.children, i, c); trackBy: btnTrackByFn">
                       <li *ngIf="subBtn.type !== 'divider'" nz-menu-item [class.st__btn-disabled]="subBtn._disabled">
                         <ng-template [ngTemplateOutlet]="btnTpl" [ngTemplateOutletContext]="{ $implicit: i, btn: subBtn, index: index }"></ng-template>
                       </li>
