选择器增加[nzMaxMultipleCount] 属性

--- a/packages/cbc/business/templates/picker-template.component.html
+++ b/packages/cbc/business/templates/picker-template.component.html
@@ -1,9 +1,9 @@
-<nz-select [nzServerSearch]="nzServerSearch" [nzShowSearch]="coShowSearch" [nzMaxTagCount]="coMaxMultipleCount"
-  [nzDropdownRender]="coDropdownRender" nzDropdownMatchSelectWidth="false" [nzNotFoundContent]="coNotFoundContent"
-  [nzMaxTagPlaceholder]="tagPlaceHolder" [nzMode]="coMode" [nzOpen]="coOpen" [nzSize]="coSize"
-  [nzAutoClearSearchValue]="coAutoClearSearchValue" [nzAutoFocus]="coAutoFocus" [nzPlaceHolder]="coPlaceHolder"
-  [nzAllowClear]="coAllowClear" [(ngModel)]="value" [nzFilterOption]="coFilterOption" (nzOnSearch)="onSearch($event)"
-  (nzScrollToBottom)="onLoadMore()" (nzOpenChange)="onOpenChanged($event)"
+<nz-select [nzServerSearch]="nzServerSearch" [nzShowSearch]="coShowSearch" [nzMaxMultipleCount]="coMaxMultipleCount"
+  [nzMaxTagCount]="coMaxMultipleCount" [nzDropdownRender]="coDropdownRender" nzDropdownMatchSelectWidth="false"
+  [nzNotFoundContent]="coNotFoundContent" [nzMaxTagPlaceholder]="tagPlaceHolder" [nzMode]="coMode" [nzOpen]="coOpen"
+  [nzSize]="coSize" [nzAutoClearSearchValue]="coAutoClearSearchValue" [nzAutoFocus]="coAutoFocus"
+  [nzPlaceHolder]="coPlaceHolder" [nzAllowClear]="coAllowClear" [(ngModel)]="value" [nzFilterOption]="coFilterOption"
+  (nzOnSearch)="onSearch($event)" (nzScrollToBottom)="onLoadMore()" (nzOpenChange)="onOpenChanged($event)"
   [nzDropdownClassName]="coDropdownMode === 'table' ? 'co-picker__drowpdown--table' : ''"
   [nzDropdownStyle]="coDropdownStyle" (nzBlur)="onBlur($event)" (nzFocus)="onFocus($event)"
   (ngModelChange)="onChanged($event)" [nzDisabled]="coDisabled">
