fix(cbc:st): small

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -275,6 +275,32 @@
       .ant-table-column-sorters {
         padding: 0;
       }
+      th.ant-table-cell {
+        font-size: 12px;
+      }
+
+      .ant-input-sm {
+        font-size: 12px;
+      }
+      .ant-select-sm .ant-select-selector {
+        height: 20px;
+        font-size: 12px;
+
+        .ant-select-selection-search-input {
+          height: 18px;
+        }
+        .ant-select-selection-item, .ant-select-selection-placeholder {
+          line-height: 1.5;
+        }
+      }
+      .ant-picker-small {
+        .ant-picker-input input {
+          font-size: 12px;
+        }
+        .ant-picker-suffix {
+          line-height: 1;
+        }
+      }
 
       tr {
         th {
