--- a/packages/cbc/index.less
+++ b/packages/cbc/index.less
@@ -3,6 +3,7 @@
 @import './basic/loading/style/index.less';
 @import './web/se/style/index.less';
 @import './web/st/style/index.less';
+@import './web/widget-grid/style/index.less';
 
 @import './business/style/index.less';
 @import './layout/style/index.less';
