--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -262,7 +262,14 @@
   }
 
   .ant-table-small {
-    .ant-table-cell-fix-right {
+    .ant-table-thead {
+      tr {
+        th.ant-table-cell-fix-right {
+          padding-left: 10px !important;
+        }
+      }
+    }
+    td.ant-table-cell-fix-right {
       padding-left: 10px !important;
     }
 
