抽屉销毁内容时，可以选择清除body下的HTML

--- a/packages/cbc/layout/page-layout/drawer/page-side-drawer.component.html
+++ b/packages/cbc/layout/page-layout/drawer/page-side-drawer.component.html
@@ -10,7 +10,7 @@
       </ng-container>
     </div>
   </div>
-  <div class="co-page-side-drawer-body">
+  <div class="co-page-side-drawer-body" #drawerBody>
     <ng-template cdkPortalOutlet></ng-template>
     <ng-content *ngIf="!coContent"></ng-content>
   </div>
