--- a/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
@@ -83,7 +83,7 @@
 <ng-template #drawerTitle>
   <div style="display: flex; align-items: center;">
     <span style=" margin-right: 8px;margin-left: 14px;">
-      New User
+      New
     </span>
     <nz-tag nzColor="processing" >激活</nz-tag>
   </div>
