--- a/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
@@ -215,7 +215,7 @@
   </nz-content>
 </nz-layout>
 
-<div *coFooter>
+<div *coDrawerFooter>
   <button nz-button nzType="default">Custom Callback</button>
   <button nz-button nzType="primary">Custom Submit</button>
 </div>
