侧栏抽屉，可以在内部组件里定义脚部

--- a/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
@@ -219,3 +219,4 @@
   <button nz-button nzType="default">Custom Callback</button>
   <button nz-button nzType="primary">Custom Submit</button>
 </div>
+<ng-template coDrawerFooter></ng-template>
