--- a/packages/cbc/web/widget-grid/style/index.less
+++ b/packages/cbc/web/widget-grid/style/index.less
@@ -1,7 +1,8 @@
 ngx-widget-grid {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: calc(100% + 16px);
+  margin-right: -8px;
+  margin-left: -8px;
   display: block;
 }
 
