--- a/packages/cbc/web/widget-grid/widget-grid.component.less
+++ b/packages/cbc/web/widget-grid/widget-grid.component.less
@@ -7,6 +7,8 @@
   position: relative;
   height: 100%;
   width: 100%;
+  padding: 8px;
+
   display: flex;
   justify-content: center;
   align-items: center;
