fix(cbc): row style

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -119,8 +119,8 @@
 
   // 修复 `st` 会导致内嵌表格的BUG
   .@{ant-prefix}-table-tbody>tr {
-    &@{st-prefix}-row-odd {
-      background: rgba(0, 0, 0, 0.02);
+    &@{st-prefix}-row-odd td {
+      background: #fafafa;
     }
 
     &@{st-prefix}-row-error {
