fix(cbc): row style

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -141,7 +141,7 @@
     &@{st-prefix}-row-selected {
       background-color: rgba(230, 247, 255, 1);
 
-      &:hover td {
+      td {
         background-color: rgba(230, 247, 255, 1);
       }
     }
