--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -31,6 +31,10 @@
       color: red;
     }
 
+    &-text {
+      font-weight: bold;
+    }
+
     &-sub {
       @{st-prefix}__btn-text {
         color: #1890ff;
