fix(cbc:st): style

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -231,8 +231,10 @@
 
   &__scroll-loading {
     position: absolute;
-    bottom: 10px;
+    top: 0;
+    bottom: 0px;
     left: 50%;
+    margin:  auto;
     display: flex;
     align-items: center;
     height: 40px;
