fix(cbc:st): style

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -220,6 +220,7 @@
               [nzOptions]="getFilterOptions(i.column, index)"
               [nzMode]="i.column.filter?.multiple ? 'multiple' : 'default'"
               [nzMaxTagCount]="1"
+              [nzDropdownClassName]="size === 'small' ? 'st-pane-small' : ''"
               nzAllowClear
               nzSize="small"
             ></nz-select>
