--- a/packages/cms/src/reuse-tab/reuse-tab.component.html
+++ b/packages/cms/src/reuse-tab/reuse-tab.component.html
@@ -3,13 +3,14 @@
   <nz-tab *ngFor="let i of list; let index = index" [nzTitle]="titleTemplate" (nzClick)="_to(index)">
     <ng-template #titleTemplate>
       <i *ngIf="!!i.icon" nz-icon [nzIconfont]="i.icon" class="reuse-tab__icon"></i>
-      <!-- <div [reuse-tab-context-menu]="i" [customContextMenu]="customContextMenu" class="reuse-tab__name" [attr.title]="i.title"> -->
+      <div [reuse-tab-context-menu]="i" [customContextMenu]="customContextMenu" class="reuse-tab__name" [attr.title]="i.title">
       <div class="reuse-tab__name" [attr.title]="i.title">
         <span [class.reuse-tab__name-width]="tabMaxWidth" [style.max-width.px]="tabMaxWidth">
           {{ i.title }}
         </span>
       </div>
       <i *ngIf="i.closable" nz-icon nzType="close" class="reuse-tab__op" (click)="_close($event, index, false)"></i>
+      </div>
     </ng-template>
   </nz-tab>
 </nz-tabset>
