--- a/packages/cms/src/reuse-tab/style/index.less
+++ b/packages/cms/src/reuse-tab/style/index.less
@@ -77,6 +77,33 @@
 
 @{reuse-tab-prefix}__cm {
   .@{ant-prefix}-menu {
+    background-color: #fff;
     border: 1px solid #e9e9e9;
+
+    .ant-menu-arrow{
+      position: absolute;
+      right: 0;
+      z-index: 0;
+      display: block;
+      width: 16px;
+      height: 16px;
+      margin-top: -4px;
+      background: #fff;
+      border-color: #0000 #fff #fff #0000;
+      border-style: solid;
+      border-width: 4.24264069px;
+      box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.07);
+      transform: translateX(-50%) rotate(45deg);
+    }
+  }
+
+  ul{
+    list-style: none;
+    background-color: transparent;
+  }
+
+  .ant-menu-item:hover{
+    color: #1890ff !important;
+    background-color: #F0F0F0;
   }
 }
