--- a/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.less
+++ b/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.less
@@ -1,65 +1,85 @@
-.detail-route {
+.dashboard-route-detail {
   height: calc(100% - 57px);
-  padding: 24px 18px 0;
-  background-color: #fff;
-  overflow: auto;
-  h4 {
+
+  display: flex;
+  flex-direction: column;
+
+  &__header {
+    padding: 0px 12px 0px;
+  }
+  &__title-name {
+    margin-left: 8px;
+    font-size: 16px;
+  }
+  &__body {
+    padding: 16px 12px 0;
+
+    overflow: auto;
+    flex: 1;
+  }
+  &__footer {
+    height: 48px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.icon-chuan,
+.icon-Flight {
+  background: #1890ff50;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  &:before {
+    font-size: 20px;
+  }
+}
+
+.shipment-no {
+  margin-left: 12px;
+  font-size: 12px;
+}
+
+.shipment-step {
+  margin: 16px 24px 0;
+}
+
+.shipment-status {
+  margin-top: 8px;
+  line-height: initial;
+  padding: 0 3px;
+}
+
+.basic-info {
+  padding: 8px;
+  background-color: rgba(196, 219, 255, .15);
+  border: none;
+  border-radius: 8px;
+
+  &__title {
+    margin-bottom: 8px;
+
     font-size: 14px;
-    font-family: PingFangSC-Medium, PingFang SC;
-    color: rgba(38, 38, 38, 1);
-    line-height: 22px;
-    font-weight: 600;
-  }
-  .state {
-    font-weight: 600;
-
-    .point {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      margin-right: 10px;
-      background-color: gray;
-    }
-
-    .hight-light {
-      color: red;
-    }
-
-    .location {
-      display: inline-block;
-      font-size: 16px;
-      font-weight: 600;
-    }
+    color: #636363;
+    font-weight: bold;
   }
 
-  .date {
-    .title {
-      font-size: 12px;
-      color: rgba(0, 0, 0, 0.45);
-      font-weight: 600;
-      margin-bottom: 5px;
-    }
-
-    .content {
-      font-weight: 600;
-      padding-bottom: 5px;
-      margin-bottom: 5px;
-    }
-  }
-
-  .map {
-    margin: 10px 0;
-    border: 1px solid lightgray;
-  }
-
-  .route-list {
-    padding: 0px 0px 20px 0;
-
-    .title {
-      font-size: 20px;
-      font-weight: bold;
-      color: rgba(23, 25, 26, 0.85);
+  &__content {
+    & > div {
+      display: flex;
+      justify-content: space-between;
+      line-height: 1.8;
+      & > div {
+        &:first-child {
+          color: #C7C7D4;
+        }
+      }
     }
   }
 }
