--- a/packages/im/src/component/im-booking-detail/im-booking-detail.component.less
+++ b/packages/im/src/component/im-booking-detail/im-booking-detail.component.less
@@ -210,3 +210,40 @@ section.detail-wrap {
     }
   }
 }
+
+.basic-info {
+  padding: 8px;
+  margin-bottom: 16px;
+  background-color: rgba(196, 219, 255, .15);
+  border: none;
+  border-radius: 8px;
+
+  &__title {
+    margin-bottom: 8px;
+
+    font-size: 14px;
+    color: #636363;
+    font-weight: bold;
+  }
+
+  &__content {
+    & > div {
+      line-height: 1.8;
+      display: flex;
+      justify-content: space-between;
+      & > div {
+        &:first-child {
+          color: #C7C7D4;
+        }
+      }
+    }
+  }
+
+  &__divider {
+    background: #f0f0f0;
+    width: 100%;
+    min-width: 100%;
+    height: 1px;
+    margin: 8px 0;
+  }
+}
