--- a/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.html
+++ b/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.html
@@ -1,41 +1,45 @@
-<div class="detail-route">
-  <h4>Shipment Details</h4>
-  <div class="state" *ngIf="isShare === false">
-    <div class="location" *ngIf="state == ShipmentStatusEnum.SellerLocation">
-      {{ "Seller's Location / Booked" | translate }}
-    </div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.InTransitToDeparturePort">
-      {{ 'In Transit to Departure Port' | translate }}
-    </div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.DeparturePort">{{ 'Departure Port' | translate }}</div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.InTransitToArrivalPort">
-      {{ 'In Transit to Arrival Port' | translate }}
-    </div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.ArrivalPort">{{ 'Arrival port' | translate }}</div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.InTransitToFinalDestination">
-      {{ 'In Transit to Final Destination' | translate }}
-    </div>
-    <div class="location" *ngIf="state == ShipmentStatusEnum.FinalDestination">
-      {{ 'Final destination' | translate }}
-    </div>
+<div class="dashboard-route-detail" *ngIf="route">
+  <div style="padding: 12px;display:flex;justify-content:space-between;">
+    <div style="font-size: 14px;">{{ 'Shipment Information' | translate }}</div>
+    <div><a (click)="goDetail()" >{{ 'View detail' | translate }}</a> </div>
   </div>
-  <div class="date" *ngIf="isShare === false">
-    <div class="title">{{ 'Expected Delivery Date' | translate }}:{{ ExpectedDeliveryDate | date: 'yyyy-MM-dd hh:mm:ss' }}</div>
+  <div class="dashboard-route-detail__header">
+    <div class="basic-info">
+      <div class="basic-info__title">{{ route.statusDisplay }}</div>
+      <div class="basic-info__content">
+        <div>
+          <div>{{ 'Freight Method' | translate }}</div>
+          <div>{{ (route.transportationMode === 1 ? 'Ocean' : 'Air') | translate }}</div>
+        </div>
+        <div>
+          <div>{{ 'Freight Type' | translate }}</div>
+          <div>{{ route.freightType }}</div>
+        </div>
+        <div>
+          <div>{{ 'Containers' | translate }}</div>
+          <div>{{ getContainerType(route) }}</div>
+        </div>
+        <div>
+          <div>{{ 'Cargo' | translate }}</div>
+          <div>
+            <span style="margin-left: 4px;">{{ route?.quantity?.value }}{{ route?.quantity?.unit }}</span>
+            <span style="margin-left: 4px;">{{ route?.weight?.value }}{{ route?.weight?.unit }}</span>
+            <span style="margin-left: 4px;">{{ route?.volume?.value }}{{ route?.volume?.unit }}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div style="margin-top: 6px;">
+      <span class="shipment-no">{{ route?.soNo }}</span>
+      <span class="shipment-no">{{ route?.shipmentNo }}</span>
+      <span class="shipment-no">{{ route?.shipmentName }}</span>
+    </div> -->
+    <!-- <div>
+      <nz-tag class="shipment-status" [nzColor]="'blue'">{{ route?.status | shipmentStatus | translate }}</nz-tag>
+    </div> -->
   </div>
 
-  <div #map class="map" [style.height.px]="mapHeight" *ngIf="!sample">
-    <!-- <share-amap
-      *ngIf="mapHeight"
-      [height]="mapHeight"
-      [markers]="icons"
-      [mode]="route?.freightMethodType === FreightMethodType.Ocean ? 'ocean' : 'air'"
-      [paths]="dashedLines && dashedLines"
-      [pathRectMargin]="{ left: 32, right: 32, top: 32, bottom: 32 }"
-      [currentPositions]="currentPositions"
-    ></share-amap> -->
-  </div>
-  <div class="route-list" *ngIf="route">
-    <div class="title" style="margin-bottom: 14px;">{{ 'Route Detail' | translate }}</div>
-    <im-shipment-step [shipment]="route"> </im-shipment-step>
+  <div class="dashboard-route-detail__body">
+    <shipment-step statusHighlight *ngIf="route" [shipment]="route"></shipment-step>
   </div>
 </div>
