--- a/packages/im/src/component/im-booking-detail/im-booking-detail.component.html
+++ b/packages/im/src/component/im-booking-detail/im-booking-detail.component.html
@@ -38,7 +38,7 @@
       </div>
       <div>
         <div>{{ 'S/O No.' | translate }}</div>
-        <div>{{ bookingDetail.shippingOrdern }}</div>
+        <div>{{ bookingDetail.shippingOrderNo }}</div>
       </div>
     </div>
   </div>
