feat(im, auth): im style, auth api ignores

--- a/packages/im/src/component/im-booking-detail/im-booking-detail.component.less
+++ b/packages/im/src/component/im-booking-detail/im-booking-detail.component.less
@@ -212,9 +212,8 @@ section.detail-wrap {
 }
 
 .basic-info {
-  padding: 8px;
+  padding: 8px 0;
   margin-bottom: 16px;
-  background-color: rgba(196, 219, 255, .15);
   border: none;
   border-radius: 8px;
 
@@ -233,7 +232,7 @@ section.detail-wrap {
       justify-content: space-between;
       & > div {
         &:first-child {
-          color: #C7C7D4;
+          color: #595959;
         }
       }
     }
