--- a/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.less
+++ b/packages/im/src/component/im-shipment-detail/im-shipment-detail.component.less
@@ -58,7 +58,6 @@
 
 .basic-info {
   padding: 8px;
-  background-color: rgba(196, 219, 255, .15);
   border: none;
   border-radius: 8px;
 
@@ -77,7 +76,7 @@
       line-height: 1.8;
       & > div {
         &:first-child {
-          color: #C7C7D4;
+          color: #595959;
         }
       }
     }
