--- a/src/style/home.less
+++ b/src/style/home.less
@@ -1,15 +1,26 @@
-@index-home-color: #314659;
-@index-home-bg: #49a9ee;
+@index-home-color    : #314659;
+@index-home-bg       : #49a9ee;
 @index-home-max-width: 1200px;
+
+ng-select {
+  color: #636e95;
+
+  ::ng-deep {
+    .ng-select-container {
+      border-radius: 4px !important;
+      border       : 1px solid var(--ion-color-medium);
+    }
+  }
+}
 
 .index-page {
   color: #697b8c;
 
   #header {
-    width: 100%;
-    max-width: 1200px;
-    margin: 20px auto 0;
-    padding: 0 24px;
+    width     : 100%;
+    max-width : 1200px;
+    margin    : 20px auto 0;
+    padding   : 0 24px;
     box-shadow: none;
   }
 
@@ -18,52 +29,52 @@
   }
 
   .page {
-    position: relative;
-    width: 100%;
+    position : relative;
+    width    : 100%;
     max-width: @index-home-max-width;
-    margin: auto;
-    padding: 0 24px;
+    margin   : auto;
+    padding  : 0 24px;
 
     &-wrapper {
       position: relative;
-      z-index: 1;
+      z-index : 1;
       overflow: inherit;
-      color: @index-home-color;
+      color   : @index-home-color;
       font-family: Avenir, 'Chinese Quote', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
         'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
       font-variant: tabular-nums;
     }
 
     h2 {
-      padding: 80px 0 40px;
-      color: @index-home-color;
+      padding    : 80px 0 40px;
+      color      : @index-home-color;
       font-weight: 400;
-      font-size: 38px;
+      font-size  : 38px;
       line-height: 46px;
-      text-align: center;
+      text-align : center;
     }
   }
 
   .page-banner {
-    position: relative;
-    display: flex;
-    align-items: center;
+    position       : relative;
+    display        : flex;
+    align-items    : center;
     justify-content: space-between;
-    width: 100%;
-    max-width: @index-home-max-width;
-    height: 520px;
-    margin: auto;
-    padding: 0 24px;
+    width          : 100%;
+    max-width      : @index-home-max-width;
+    height         : 520px;
+    margin         : auto;
+    padding        : 0 24px;
 
     &__slogan {
-      width: 54%;
-      min-width: 420px;
-      max-width: 560px;
+      width     : 54%;
+      min-width : 420px;
+      max-width : 560px;
       min-height: 336px;
-      color: #0d1a26;
+      color     : #0d1a26;
 
       h1 {
-        margin: 12px 0;
+        margin   : 12px 0;
         font-size: 54px;
         font-family: 'Futura', 'Helvetica Neue For Number', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'PingFang SC',
           'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -74,17 +85,17 @@
       }
 
       .ant-btn {
-        min-width: 110px;
-        height: 40px;
-        margin-right: 16px;
-        font-size: 16px;
+        min-width    : 110px;
+        height       : 40px;
+        margin-right : 16px;
+        font-size    : 16px;
         border-radius: 20px;
       }
 
       &-btn {
-        display: flex;
+        display    : flex;
         align-items: center;
-        margin-top: 64px;
+        margin-top : 64px;
         line-height: 40px;
 
         .github {
@@ -94,42 +105,42 @@
     }
 
     &__img {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      width: 46%;
+      position : absolute;
+      right    : 0;
+      bottom   : 0;
+      width    : 46%;
       max-width: 482px;
-      height: 420px;
-      overflow: hidden;
+      height   : 420px;
+      overflow : hidden;
 
       img {
-        height: 100%;
+        height       : 100%;
         border-radius: 8px;
       }
     }
   }
 
   .page-feature {
-    position: relative;
+    position      : relative;
     padding-bottom: 80px;
-    color: #fff;
+    color         : #fff;
 
     &__bg {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      margin: 0;
+      position  : absolute;
+      top       : 0;
+      right     : 0;
+      bottom    : 0;
+      left      : 0;
+      margin    : 0;
       background: @index-home-bg;
-      transform: skewY(-4.5deg);
+      transform : skewY(-4.5deg);
 
       &-bottom {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        height: 200px;
+        position  : absolute;
+        right     : 0;
+        bottom    : 0;
+        left      : 0;
+        height    : 200px;
         background: @index-home-bg;
       }
     }
@@ -148,28 +159,28 @@
     }
 
     &__item {
-      display: flex;
-      height: 100px;
+      display      : flex;
+      height       : 100px;
       margin-bottom: 56px;
     }
 
     .anticon {
       margin-right: 16px;
-      padding-top: 8px;
-      font-size: 36px;
+      padding-top : 8px;
+      font-size   : 36px;
     }
   }
 
   .page-theme {
     margin-bottom: 48px;
-    overflow: hidden;
-    background: #fff;
+    overflow     : hidden;
+    background   : #fff;
 
     &__item {
-      display: block;
+      display      : block;
       margin-bottom: 32px;
-      color: @index-home-color;
-      text-align: center;
+      color        : @index-home-color;
+      text-align   : center;
 
       &:hover {
         color: @index-home-bg;
@@ -194,13 +205,13 @@
 
     .page-banner {
       &__slogan {
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;
+        width     : 100%;
+        min-width : 100%;
+        max-width : 100%;
         text-align: center;
 
         &-btn {
-          flex-wrap: wrap;
+          flex-wrap      : wrap;
           justify-content: center;
 
           >a {
@@ -217,12 +228,59 @@
     .page-feature {
       &__item {
         flex-direction: column;
-        text-align: center;
+        text-align    : center;
 
         .anticon {
           margin: 0 0 16px 0;
         }
       }
     }
+  }
+}
+
+// 下拉选择样式
+.ng-select {
+  .ng-select-container {
+    border       : 1px solid #f2f2f2 !important;
+    border-radius: 0.16rem !important;
+
+    color: var(--ion-item-color) !important;
+
+    .ng-input,
+    .ng-placeholder {
+      top: unset !important;
+
+      input::-webkit-input-placeholder {
+        color      : initial;
+        font-weight: 400 !important;
+      }
+
+      color      : initial;
+      font-weight: 400 !important;
+    }
+  }
+
+  &.ng-select-opened.ng-select-bottom>.ng-select-container {
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius : 0 !important;
+  }
+
+  &.ng-select-opened.ng-select-top>.ng-select-container {
+    border-top-right-radius: 0 !important;
+    border-top-left-radius : 0 !important;
+  }
+
+  .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
+    background-color: var(--ion-item-background) !important;
+    color           : var(--ion-item-color) !important;
+
+    &.ng-option-selected {
+      background-color: var(--ion-item-background) !important;
+      color           : var(--ion-color-primary) !important;
+    }
+  }
+
+  &.ng-select-single.ng-select-filtered:not(.ng-select-opened) .ng-select-container.ng-has-value .ng-value-container .ng-value {
+    visibility: visible;
   }
 }
