--- a/src/styles.less
+++ b/src/styles.less
@@ -12,7 +12,8 @@
 @import '../packages/map/index.less';
 @import '../packages/chart/index.less';
 @import '../packages/theme/layout/default/index.less';
-
+/* ng-select style */
+@import '~@ng-select/ng-select/themes/default.theme.css';
 // docs
 @import './style/index.less';
 
